[package]
name = "flashwright"
version = "1.0.0"
edition = "2021"
authors = ["Ozzy Ocak <ozzy@ocak.io>"]
license = "MIT"
description = "A fast Chromium automation CLI written in Rust"
repository = "https://github.com/ozzyocak/flashwright"
keywords = ["chrome", "automation", "cdp", "browser", "cli"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "process", "io-util", "net", "fs", "sync", "time"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
